@@ -27,6 +27,7 @@ package io.questdb.test.cairo.fuzz;
 import io.questdb.cairo.ColumnType;
 import io.questdb.cairo.CursorPrinter;
 import io.questdb.cairo.LogRecordSinkAdapter;
+import io.questdb.cairo.MicrosTimestampDriver;
 import io.questdb.cairo.TableReader;
 import io.questdb.cairo.TableReaderMetadata;
 import io.questdb.cairo.TableToken;
@@ -37,7 +38,6 @@ import io.questdb.cairo.sql.RecordCursorFactory;
 import io.questdb.cairo.sql.RecordMetadata;
 import io.questdb.cairo.sql.TableRecordMetadata;
 import io.questdb.griffin.SqlException;
-import io.questdb.griffin.model.IntervalUtils;
 import io.questdb.log.Log;
 import io.questdb.log.LogRecord;
 import io.questdb.mp.WorkerPoolUtils;
@@ -46,12 +46,11 @@ import io.questdb.std.IntHashSet;
 import io.questdb.std.IntList;
 import io.questdb.std.LongHashSet;
 import io.questdb.std.Misc;
-import io.questdb.std.NumericException;
 import io.questdb.std.ObjHashSet;
 import io.questdb.std.ObjIntHashMap;
 import io.questdb.std.ObjList;
 import io.questdb.std.Rnd;
-import io.questdb.std.datetime.microtime.Timestamps;
+import io.questdb.std.datetime.microtime.Micros;
 import io.questdb.std.str.StringSink;
 import io.questdb.std.str.Utf8StringSink;
 import io.questdb.std.str.Utf8s;
@@ -104,12 +103,12 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
             ObjList<FuzzTransaction> transactions = new ObjList<>();
             Rnd rnd = generateRandomAndProps();
             try {
-                long initialDelta = Timestamps.MINUTE_MICROS * 15;
+                long initialDelta = Micros.MINUTE_MICROS * 15;
                 int initialCount = 4 * 24 * 5;
                 generateInsertsTransactions(
                         transactions,
                         1,
-                        parseFloorPartialTimestamp("2020-02-24T04:30"),
+                        MicrosTimestampDriver.floor("2020-02-24T04:30"),
                         initialDelta,
                         initialCount,
                         1 + rnd.nextInt(1),
@@ -225,7 +224,7 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
             ObjList<FuzzTransaction> transactions = new ObjList<>();
             Rnd rnd = generateRandomAndProps();
             try {
-                long initialDelta = Timestamps.MINUTE_MICROS * 15;
+                long initialDelta = Micros.MINUTE_MICROS * 15;
                 int initialCount = 4 * 24 * 5;
                 int initialDuplicates = 2 + rnd.nextInt(5);
                 generateInsertsTransactions(
@@ -281,7 +280,7 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
 
             ObjList<FuzzTransaction> transactions = new ObjList<>();
             Rnd rnd = generateRandomAndProps();
-            long initialDelta = Timestamps.MINUTE_MICROS * 15;
+            long initialDelta = Micros.MINUTE_MICROS * 15;
             int initialCount = 2 * 24 * 5;
             generateInsertsTransactions(
                     transactions,
@@ -546,7 +545,7 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
         for (int i = 0; i < foundSymbols.length; i++) {
             if (!foundSymbols[i]) {
                 CharSequence symbol = symbols[i];
-                Assert.fail("Symbol '" + symbol + "' not found for timestamp " + Timestamps.toUSecString(timestamp));
+                Assert.fail("Symbol '" + symbol + "' not found for timestamp " + Micros.toUSecString(timestamp));
             }
             foundSymbols[i] = false;
         }
@@ -642,8 +641,7 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
                 for (int op = 0; op < size; op++) {
                     int dupStep = Math.max(2, transaction.operationList.size() / (1 + rnd.nextInt(10)));
                     FuzzTransactionOperation operation = transaction.operationList.getQuick(op);
-                    if (operation instanceof FuzzInsertOperation) {
-                        FuzzInsertOperation insertOperation = (FuzzInsertOperation) operation;
+                    if (operation instanceof FuzzInsertOperation insertOperation) {
                         if (op % dupStep == 1) {
                             FuzzInsertOperation duplicate = new FuzzInsertOperation(
                                     rnd.nextLong(),
@@ -763,24 +761,13 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
         }
     }
 
-    private long parseFloorPartialTimestamp(String from) {
-        try {
-            return IntervalUtils.parseFloorPartialTimestamp(from);
-        } catch (NumericException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
     private CharSequence readStrValue(Record rec, int colType) {
-        switch (colType) {
-            case ColumnType.SYMBOL:
-                return rec.getSymA(2);
-            case ColumnType.STRING:
-                return rec.getStrA(2);
-            case ColumnType.VARCHAR:
-                return Utf8s.toString(rec.getVarcharA(2));
-        }
-        throw new IllegalArgumentException();
+        return switch (colType) {
+            case ColumnType.SYMBOL -> rec.getSymA(2);
+            case ColumnType.STRING -> rec.getStrA(2);
+            case ColumnType.VARCHAR -> Utf8s.toString(rec.getVarcharA(2));
+            default -> throw new IllegalArgumentException();
+        };
     }
 
     private void reinsertSameData(Rnd rnd, String tableNameDedup, String timestampColumnName) throws SqlException {
@@ -789,7 +776,7 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
 
         LOG.info().$("Re-inserting same data into table ").$(tableNameDedup).$();
         TableToken tt = engine.verifyTableName(tableNameDedup);
-        String partitions = readTxnToString(tt, false, true, true);
+        String partitions = readTxnToString(tt, false, true, true, false);
         int inserts = 2 + rnd.nextInt(10);
         long minTs, maxTs;
         try (TableReader reader = getReader(tableNameDedup)) {
@@ -802,7 +789,7 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
 
         for (int i = 0; i < inserts; i++) {
             long fromTs = minTs + rnd.nextLong(maxTs - minTs);
-            long toTs = (long) (fromTs + Timestamps.DAY_MICROS * Math.pow(1.2, rnd.nextDouble()));
+            long toTs = (long) (fromTs + Micros.DAY_MICROS * Math.pow(1.2, rnd.nextDouble()));
 
             String insertSql = "insert into " + tableNameDedup +
                     " select * from " + tableNameDedup +
@@ -814,18 +801,20 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
         drainWalQueue();
 
         Assert.assertFalse("table should not be suspended", engine.getTableSequencerAPI().getTxnTracker(tt).isSuspended());
-        String partitionsAfter = readTxnToString(tt, false, true, true);
+        String partitionsAfter = readTxnToString(tt, false, true, true, false);
         Assert.assertEquals("partitions should be not rewritten", partitions, partitionsAfter);
     }
 
     private void runDedupWithShiftAndStep(Rnd rnd, String tableName, int colType) {
         ObjList<FuzzTransaction> transactions = new ObjList<>();
         try {
-            long initialDelta = Timestamps.MINUTE_MICROS * 15;
+            long initialDelta = Micros.MINUTE_MICROS * 15;
             int rndCount = rnd.nextInt(10);
             int strLen = 4 + rnd.nextInt(20);
-            List<String> distinctSymbols = Arrays.stream(generateSymbols(rnd, 1 + rndCount, strLen, tableName)).distinct()
-                    .collect(Collectors.toList());
+            List<String> distinctSymbols = Arrays
+                    .stream(generateSymbols(rnd, 1 + rndCount, strLen, tableName))
+                    .distinct()
+                    .toList();
             String[] symbols = new String[distinctSymbols.size()];
             distinctSymbols.toArray(symbols);
             String[] initialSymbols = symbols.length == 1
@@ -851,10 +840,10 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
             maybeConvertToParquet(tableName);
 
             transactions.clear();
-            long shift = rnd.nextLong(4 * 24 * 5) * Timestamps.MINUTE_MICROS * 15 +
-                    rnd.nextLong(15) * Timestamps.MINUTE_MICROS;
+            long shift = rnd.nextLong(4 * 24 * 5) * Micros.MINUTE_MICROS * 15 +
+                    rnd.nextLong(15) * Micros.MINUTE_MICROS;
             long from = parseFloorPartialTimestamp("2020-02-24") + shift;
-            long delta = Timestamps.MINUTE_MICROS;
+            long delta = Micros.MINUTE_MICROS;
             int count = rnd.nextInt(48) * 60;
             int rowsWithSameTimestamp = 1 + rnd.nextInt(2);
             generateInsertsTransactions(
@@ -910,13 +899,13 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
                     chooseUpsertKeys(readerMetadata, dedupKeys, rnd, upsertKeyIndexes);
                     timestampColumnName = readerMetadata.getColumnName(readerMetadata.getTimestampIndex());
 
-                    long start = IntervalUtils.parseFloorPartialTimestamp("2022-02-24T23:59:59");
-                    long end = start + 2 * Timestamps.SECOND_MICROS;
+                    long start = MicrosTimestampDriver.floor("2022-02-24T23:59:59");
+                    long end = start + 2 * Micros.SECOND_MICROS;
                     transactions = generateSet(rnd, sequencerMetadata, readerMetadata, start, end, tableNameWalNoDedup);
                     comaSeparatedUpsertCols = toCommaSeparatedString(readerMetadata, upsertKeyIndexes);
                 }
                 String alterStatement = String.format(
-                        "alter table %s dedup upsert keys(%s))",
+                        "alter table %s dedup upsert keys(%s)",
                         tableNameDedup,
                         comaSeparatedUpsertCols
                 );
@@ -983,12 +972,18 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
                 timestampColumnName = meta.getColumnName(meta.getTimestampIndex());
             }
 
-            long start = IntervalUtils.parseFloorPartialTimestamp("2022-02-24T17");
-            long end = start + fuzzer.partitionCount * Timestamps.DAY_MICROS;
+            long start = MicrosTimestampDriver.floor("2022-02-24T17");
+            long end = start + fuzzer.partitionCount * Micros.DAY_MICROS;
             ObjList<FuzzTransaction> transactions = fuzzer.generateTransactions(tableNameDedup, rnd, start, end);
 
             try {
-                transactions = uniqueInserts(transactions);
+                long initialMinTs, initialMaxTs;
+                try (TableReader reader = getReader(tableNameNoWal)) {
+                    initialMinTs = reader.getMinTimestamp();
+                    initialMaxTs = reader.getMaxTimestamp();
+                }
+
+                transactions = uniqueInserts(transactions, initialMinTs, initialMaxTs, 1000000L);
                 WorkerPoolUtils.setupWriterJobs(sharedWorkerPool, engine);
                 sharedWorkerPool.start(LOG);
 
@@ -1057,7 +1052,7 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
     private void testDedupWithRandomShiftAndStepAndColumnTops(Rnd rnd, short columType, String tableName) throws SqlException {
         ObjList<FuzzTransaction> transactions = new ObjList<>();
         try {
-            long initialDelta = Timestamps.MINUTE_MICROS * 15;
+            long initialDelta = Micros.MINUTE_MICROS * 15;
 
             int initialDuplicates = 1 + rnd.nextInt(1);
             long startTimestamp = parseFloorPartialTimestamp("2020-02-24T04:30");
@@ -1115,10 +1110,10 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
             applyWal(transactions, tableName, 1, rnd);
 
             transactions.clear();
-            long shift = (startCount > 0 ? rnd.nextLong(startCount) : 0) * Timestamps.MINUTE_MICROS * 15 +
-                    rnd.nextLong(15) * Timestamps.MINUTE_MICROS;
+            long shift = (startCount > 0 ? rnd.nextLong(startCount) : 0) * Micros.MINUTE_MICROS * 15 +
+                    rnd.nextLong(15) * Micros.MINUTE_MICROS;
             long from = startTimestamp + shift;
-            long delta = Timestamps.MINUTE_MICROS;
+            long delta = Micros.MINUTE_MICROS;
             int count = rnd.nextInt(48) * 60;
             int rowsWithSameTimestamp = 1 + rnd.nextInt(2);
             generateInsertsTransactions(
@@ -1175,7 +1170,7 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
         return sink.toString();
     }
 
-    private ObjList<FuzzTransaction> uniqueInserts(ObjList<FuzzTransaction> transactions) {
+    private ObjList<FuzzTransaction> uniqueInserts(ObjList<FuzzTransaction> transactions, long minTs, long maxTs, long step) {
         ObjList<FuzzTransaction> uniqueTransactions = new ObjList<>();
         LongHashSet uniqueTimestamps = new LongHashSet();
 
@@ -1186,7 +1181,10 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
                 for (int j = 0; j < transaction.operationList.size(); j++) {
                     FuzzTransactionOperation operation = transaction.operationList.getQuick(j);
                     if (operation instanceof FuzzInsertOperation) {
-                        if (uniqueTimestamps.add(((FuzzInsertOperation) operation).getTimestamp())) {
+                        long timestamp = ((FuzzInsertOperation) operation).getTimestamp();
+
+                        boolean isInitialRange = timestamp >= minTs && timestamp <= maxTs && (timestamp - minTs) % step == 0;
+                        if (!isInitialRange && uniqueTimestamps.add(timestamp)) {
                             unique.operationList.add(operation);
                         } else {
                             Misc.free(operation);
@@ -1251,7 +1249,7 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
                 try {
                     long timestamp = rec.getTimestamp(0);
                     int commit = rec.getInt(1);
-                    if (timestamp >= (fromTimestamp - Timestamps.MINUTE_MICROS * 5) || started) {
+                    if (timestamp >= (fromTimestamp - Micros.MINUTE_MICROS * 5) || started) {
                         // Keep printing whole insert time range, regardless of the failures
                         started = true;
                         sink.putISODate(timestamp).put(',').put(commit);
@@ -1277,16 +1275,16 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
                             }
                             int symbolIndex = symbolSet.get(sym);
                             if (symbolIndex < 0) {
-                                Assert.fail("Unknown symbol found: timestamp " + Timestamps.toUSecString(timestamp) + ", symbol '" + sym + "'");
+                                Assert.fail("Unknown symbol found: timestamp " + Micros.toUSecString(timestamp) + ", symbol '" + sym + "'");
                             }
                             if (foundSymbols[symbolIndex]) {
-                                Assert.fail("Duplicate timestamp " + Timestamps.toUSecString(timestamp) + " for symbol '" + sym + "'");
+                                Assert.fail("Duplicate timestamp " + Micros.toUSecString(timestamp) + " for symbol '" + sym + "'");
                             }
                             foundSymbols[symbolIndex] = true;
                         } else {
                             if (timestamp == lastTimestamp) {
                                 if (++dups > existingDups) {
-                                    Assert.fail("Duplicate timestamp " + Timestamps.toUSecString(timestamp));
+                                    Assert.fail("Duplicate timestamp " + Micros.toUSecString(timestamp));
                                 }
                             } else {
                                 dups = 1;
@@ -1295,21 +1293,21 @@ public class DedupInsertFuzzTest extends AbstractFuzzTest {
 
                         if (timestamp < lastTimestamp) {
                             Assert.fail("Out of order timestamp " +
-                                    Timestamps.toUSecString(lastTimestamp) +
+                                    Micros.toUSecString(lastTimestamp) +
                                     " followed by " +
-                                    Timestamps.toUSecString(timestamp)
+                                    Micros.toUSecString(timestamp)
                             );
                         }
 
                         if ((timestamp - fromTimestamp) % delta == 0) {
-                            Assert.assertEquals("expected commit at timestamp " + Timestamps.toUSecString(timestamp), 2, commit);
+                            Assert.assertEquals("expected commit at timestamp " + Micros.toUSecString(timestamp), 2, commit);
                         }
 
                         Assert.assertTrue("commit must be 1 or 2", commit > 0);
                     }
                     lastTimestamp = timestamp;
 
-                    if (timestamp > (toTimestamp + Timestamps.MINUTE_MICROS * 5)) {
+                    if (timestamp > (toTimestamp + Micros.MINUTE_MICROS * 5)) {
                         break;
                     }
                 } catch (AssertionError e) {
